--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
 spring.liquibase.change-log=/db/changelog-mysql/db.changelog-master.xml
+spring.h2.console.enabled=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
+rabbitmq.message.queue=sms.data
+rabbitmq.message.failure-exchange=x.sms.data.failure
+rabbitmq.message.failure-queue=q.sms.data.failure
+rabbitmq.message.failure-routing=fall.back
