enable schedule for statistic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ rabbitmq.message.queue=sms.data
 rabbitmq.message.failure-exchange=x.sms.data.failure
 rabbitmq.message.failure-queue=q.sms.data.failure
 rabbitmq.message.failure-routing=fall.back
+
+message.statistic.file-path=message/statistic.json
+message.statistic.schedule-cron=@hourly
