change rabbit config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,11 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
 
-rabbitmq.message.queue=sms.data
-rabbitmq.message.failure-exchange=x.sms.data.failure
-rabbitmq.message.failure-queue=q.sms.data.failure
+rabbitmq.message.routing-key=sms.data
+rabbitmq.message.exchange=x-message
+rabbitmq.message.queue=q-message
+rabbitmq.message.failure-exchange=x-message-failure
+rabbitmq.message.failure-queue=q-message-failure
 rabbitmq.message.failure-routing=fall.back
 
 message.statistic.file-path=statistic/types.json
